# the-adventures-of-indy

./: .gitignore  CLAUDE.md  README.md  play.ipynb  pyproject.toml
data/confirmed/: carolina.geojson  coomes.geojson  iphan.geojson  iriarte.geojson  james_q_jacobs.geojson  james_q_jacobs_processed.geojson  prumers.geojson  radambrasil.geojson  souza.geojson  walker.geojson  wilian.geojson  wilian_processed.geojson
data/evals/: lidar_eval_output_eval_0.json  lidar_test_tiles.json  lidar_tiles_confirmed.json  lidar_tiles_control.json  lidar_tiles_signed_urls.json  report_lidar_eval_output_test_2.json
data/lidar_tiles/: all_dataset_metadata.json  cms.geojson  nouragues.geojson  nouragues_metadata.json  others.geojson  others_metadata.json  paracou.geojson  paracou_metadata.json
data/raw/: cms_brazil_lidar_tile_inventory.csv  coomes.csv  iriarte.csv  prumers.csv  radambrasil.csv  souza.csv  walker.csv
data/raw/Limites2024/: LimBiogeografico.dbf  LimBiogeografico.htm  LimBiogeografico.lyr  LimBiogeografico.sbn  LimBiogeografico.sbx  LimBiogeografico.shp.xml  LimBiogeografico.shx  LimRAISG.dbf  LimRAISG.htm  LimRAISG.lyr  LimRAISG.sbn  LimRAISG.sbx  LimRAISG.shp.xml  LimRAISG.shx
data/raw/carolina/: Earthworks.rds
data/raw/sitios/: sitios.shp  sitios.shx  wfsrequest.txt
src/: config.py  utils.py
src/evals/lidar/: data.py  prompts.py  run_eval.py  stats.py
src/evals/terra_preta/: data.py  prompts.py  run_eval.py  stats.py  tools.py
src/scripts/: amazon_boundary.py  confirmed.py  prompts.py
src/scripts/lidar_tiles/: cms.py  cms_download.py  process_zscore.py  (+2 more)
